--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     }, 
     "scripts": {
         "start": "node index.js",
+        "mongo": "node . --db 'mongodb+srv://Iyan:abuSofyan@cluster0.jtg4jxn.mongodb.net/?retryWrites=true&w=majority'",
         "test": "node test.js",
         "test2": "nodemon index.js"
     },
